objects/ASI_TH_CRM_OutletType__c.object
<CustomObject>
    <description>ASI CRM Outlet Type</description>
    <fields>
        <fullName>ASI_CRM_Active_for_PROS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active for PROS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Channel_Group__c</fullName>
        <label>Channel Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>MOT</fullName>
                </value>
                <value>
                    <fullName>TOT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Channel__c</fullName>
        <formula>ASI_CRM_Sub_Channel__r.ASI_CRM_CN_Channel__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Channel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Class__c</fullName>
        <label>Class</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Middle</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Group_Outlet_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group Outlet Type</label>
        <referenceTo>ASI_CRM_Group_Outlet_Type__c</referenceTo>
        <relationshipName>Outlet_Type</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_ON_OFF__c</fullName>
        <label>ON/OFF</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ON</fullName>
                </value>
                <value>
                    <fullName>OFF</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_PROS_Type__c</fullName>
        <label>PROS Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TOT</fullName>
                </value>
                <value>
                    <fullName>LEB</fullName>
                </value>
                <value>
                    <fullName>HEB</fullName>
                </value>
                <value>
                    <fullName>Restaurant</fullName>
                </value>
                <value>
                    <fullName>NC</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sub_Channel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub-Channel</label>
        <referenceTo>ASI_MFM_Sub_Channel__c</referenceTo>
        <relationshipName>Outlet_Type</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Code__c</fullName>
        <externalId>true</externalId>
        <label>Code</label>
        <length>25</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Outlet Type</label>
    <listViews>
        <fullName>ASI_CRM_JP_Outlet_Type</fullName>
        <columns>NAME</columns>
        <columns>ASI_TH_CRM_Code__c</columns>
        <columns>ASI_TH_CRM_Description__c</columns>
        <columns>ASI_CRM_Class__c</columns>
        <columns>ASI_CRM_Channel_Group__c</columns>
        <columns>ASI_CRM_PROS_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_TH_CRM_OutletType__c.ASI_CRM_JP_Outlet_Type</value>
        </filters>
        <label>JP Outlet Type</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_JP_All_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_MY_Outlet_Types</fullName>
        <columns>NAME</columns>
        <columns>ASI_TH_CRM_Code__c</columns>
        <columns>ASI_CRM_Channel__c</columns>
        <columns>ASI_TH_CRM_Description__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_TH_CRM_OutletType__c.ASI_CRM_MY_Outlet_Type</value>
        </filters>
        <label>MY Outlet Types</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_MY_PowerUser</group>
            <group>ASI_CRM_MY_StandardUser</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_TH_Outlet_Types</fullName>
        <columns>NAME</columns>
        <columns>ASI_TH_CRM_Code__c</columns>
        <columns>ASI_CRM_Group_Outlet_Type__c</columns>
        <columns>ASI_CRM_Active_for_PROS__c</columns>
        <columns>ASI_TH_CRM_Description__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_TH_CRM_OutletType__c.ASI_TH_CRM_Outlet_Type</value>
        </filters>
        <label>TH Outlet Types</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_TH_CRM_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_TW_Outlet_Types</fullName>
        <columns>NAME</columns>
        <columns>ASI_TH_CRM_Code__c</columns>
        <columns>ASI_CRM_Sub_Channel__c</columns>
        <columns>ASI_CRM_Channel__c</columns>
        <columns>ASI_TH_CRM_Description__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>ASI_CRM_ON_OFF__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_TH_CRM_OutletType__c.ASI_CRM_TW_Outlet_Type</value>
        </filters>
        <label>TW Outlet Types</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_TW_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASI_TH_CRM_Code__c</columns>
        <columns>ASI_TH_CRM_Description__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_TH_CRM_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Outlet Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Outlet Type</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_JP_Outlet_Type</fullName>
        <active>true</active>
        <label>JP CRM Outlet Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_MO_Outlet_Type</fullName>
        <active>true</active>
        <label>MO Outlet Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_MY_Outlet_Type</fullName>
        <active>true</active>
        <label>MY Outlet Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_TW_Outlet_Type</fullName>
        <active>true</active>
        <description>This is used by TW CRM</description>
        <label>TW Outlet Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_TH_CRM_Outlet_Type</fullName>
        <active>true</active>
        <label>ASI TH CRM Outlet Type</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>